# local-docs-mcp

./: .cocoignore  .cocoignore.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
config/: default.env.example  mcp_config.json
docs/: CONFIGURATION.md  INDEXING.md  INSTRUCTIONS.md  MCP_USAGE.md
src/: __init__.py  bootstrap.py  cli.py  config.py
src/indexing/: __init__.py  chunking.py  force_reindex.py  main_flow.py
src/mcp_server/: __init__.py  server.py  tools.py
src/search/: __init__.py  models.py  service.py
tests/: __init__.py  test_cli.py  test_cocoignore.py  test_hybrid_search.py  test_mcp_integration.py  test_search_performance.py  test_search_service.py
